src/objects/Currency_Director_FFA_Cross_Rates__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipName>Currency_Director_Accounting_Currencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Home_Currency__c</fullName>
        <formula>Accounting_Currency__r.c2g__OwnerCompany__r.Currency_Director_Home_Currency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Home Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_ID__c</fullName>
        <formula>Accounting_Currency__r.c2g__OwnerCompany__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>Accounting_Currency__r.c2g__OwnerCompany__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cross_Rate_Date__c</fullName>
        <formula>IF( Currency_Director_Currencies__r.Name =  Currency_Director_Currencies__r.Currency_Director__r.Director_Currency__c ,  Currency_Director_Currencies__r.Currency_Director__r.Latest_related_currency_Effective_Date__c , Currency_Director_Currencies__r.Last_Rate_Update_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cross Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cross_Rate_Dates_Match__c</fullName>
        <formula>IF( Currency_Director_Currencies__r.Name =  Currency_Director_Currencies__r.Currency_Director__r.Director_Currency__c, true,



IF( Accounting_Currency__r.c2g__OwnerCompany__r.Currency_Director_Home_Currency__r.Name =  Currency_Director_Currencies__r.Currency_Director__r.Director_Currency__c , true,

IF( Accounting_Currency__r.c2g__OwnerCompany__r.Currency_Director_Home_Currency__r.Last_Rate_Update_Date__c =  Currency_Director_Currencies__r.Last_Rate_Update_Date__c , true, false)





)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cross Rate Date Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cross_Rate__c</fullName>
        <formula>ROUND(Currency_Director_Currencies__r.Last_Rate_Update_Rate__c / Accounting_Currency__r.c2g__OwnerCompany__r.Currency_Director_Home_Currency__r.Last_Rate_Update_Rate__c  ,4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cross Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency_Director_Currencies__c</fullName>
        <label>Currency Director Currencies</label>
        <referenceTo>Currency_Director_Currencies__c</referenceTo>
        <relationshipName>Currency_Director_Companies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Home_Exclude__c</fullName>
        <formula>If(Accounting_Currency__r.Name =  Company_Home_Currency__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Home ? (Exclude)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OK_to_Load__c</fullName>
        <formula>If(Currency_Director_Currencies__r.Currency_Director__r.Rates_Share_Consistent_Effective_Dates__c = true,

If(Is_Home_Exclude__c = true, false, true)

,

false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OK to Load</label>
        <type>Checkbox</type>
    </fields>
    <label>Currency FFA Rate to Load</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Company_Name__c</columns>
        <columns>Accounting_Currency__c</columns>
        <columns>Cross_Rate__c</columns>
        <columns>Cross_Rate_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OK_to_Load__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Rates Ready for Load</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Currency FFA Cross Rates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Currency Director FFA Rates to Load</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>